--- a/lab-4/app/views/grader_application/_form.html.erb
+++ b/lab-4/app/views/grader_application/_form.html.erb
@@ -2,27 +2,16 @@
 <%= fields_for @grader do |form| %>
     <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, required: true %>
     <%= form.label :email, 'OSU Email' %>
-    <%= form.text_field :email %>
+    <%= form.text_field :email, required: true %>
     <%= form.label :major %>
-    <%= form.text_field :major %> 
+    <%= form.text_field :major, required: true %> 
     
     <fieldset id="availabilities" name="availabilities" style="position:relative; padding:1em; margin-top:1em; margin-bottom:1em; border:2px black solid">
         <span style="position:absolute; left:0.5em; top:-0.75em; background:white;font-weight:bold">Available Times</span>
     </fieldset>
     <%= button_tag "Add", type: "button", onclick:"window.addNewTimeSlot()"%>
-
-
-
-
-
-
-
-
-
-
-
 
     <fieldset id="courses" name="courses" style="position:relative; padding:1em; margin-top:1em; margin-bottom:1em; border:2px black solid">
         <span style="position:absolute; left:0.5em; top:-0.75em; background:white;font-weight:bold">Courses of Interest</span>
