--- a/lab-4/app/views/grader_application/_form.html.erb
+++ b/lab-4/app/views/grader_application/_form.html.erb
@@ -12,12 +12,12 @@
     <%= form.label :major %>
     <%= form.text_field :major, required: true %> 
     
-    <fieldset id="availabilities" name="availabilities" style="position:relative; padding:1em; margin-top:1em; margin-bottom:1em; border:2px black solid">
+    <fieldset id="availabilities" name="availabilities" class="options" style="position:relative; padding:1em; margin-top:1em; margin-bottom:1em; border:2px black solid">
         <span style="position:absolute; left:0.5em; top:-0.75em; background:white;font-weight:bold">Available Times</span>
     </fieldset>
     <%= button_tag "Add", type: "button", onclick:"window.addNewTimeSlot()"%>
 
-    <fieldset id="courses" name="courses" style="position:relative; padding:1em; margin-top:1em; margin-bottom:1em; border:2px black solid">
+    <fieldset id="courses" name="courses" class="options" style="position:relative; padding:1em; margin-top:1em; margin-bottom:1em; border:2px black solid">
         <span style="position:absolute; left:0.5em; top:-0.75em; background:white;font-weight:bold">Courses of Interest (Please only select courses you received an A in)</span>
     </fieldset>
     <%= button_tag "Add", type: "button", onclick:"window.addNewCourse()"%>
