--- a/lab-4/app/views/courses/show.html.erb
+++ b/lab-4/app/views/courses/show.html.erb
@@ -21,6 +21,9 @@
       <th>Component</th>
       <th>Start date</th>
       <th>End date</th>
+      <% if current_user.user_type == 'Admin' %>
+        <th>No. of Graders Assigned</th>
+      <% end %>
       <th>More info</th>
       <th colspan="3"></th>
     </tr>
@@ -35,6 +38,9 @@
         <td><%= section.component %></td>
         <td><%= section.start_date %></td>
         <td><%= section.end_date %></td>
+        <% if current_user.user_type == 'Admin' %>
+            <td><em><%= section.graders.count %> / 2 Assigned</em></td>
+        <% end %>
         <td><%= link_to 'Show', section %></td>
 
         <%# Allow Admin to make changes to course information %>
