--- a/lab-4/app/views/recommendations/_form.html.erb
+++ b/lab-4/app/views/recommendations/_form.html.erb
@@ -8,7 +8,7 @@
     <%= form.label :'Grader ID (Lastname.#)' %>
     <%= form.text_field :grader_name_dot_number, required: true %>
     <%= form.label :'Course title that the grader is being recommended for' %>
-    <%= form.collection_select :id, Course.all, :id, :course_number_with_title, prompt: true %> 
+    <%= form.collection_select :course_number, Course.all, :course_number, :course_number_with_title, prompt: true %> 
     <%= form.label :'Section Number for the course the grader is being recommended for (Enter only if you are requesting a grader for a specific section. Otherwise leave it blank)' %>
     <%= form.number_field :section %>
     <%= form.label :'Comments' %>
