--- a/lab-4/app/views/grader_application/get.html.erb
+++ b/lab-4/app/views/grader_application/get.html.erb
@@ -14,6 +14,21 @@
 
 
 
+<% if current_user.has_grader %>
+    <%= button_to "Delete Form", { action: "deleteForm" },
+                                method: :deleteForm, data: { confirm: "Are you sure?" } %>
+<% end %>
+
+
+
+
+
+<br/>
+<%= link_to 'Back to courses', home_index_path %>
+
+
+
+
 <script>
    window.addEventListener('load', (event) => {
 
