--- a/lab-4/app/views/recommendations/_form.html.erb
+++ b/lab-4/app/views/recommendations/_form.html.erb
@@ -16,8 +16,8 @@
     <%= form.label :'Course title that the grader is being recommended for' %>
     <%= form.collection_select :course_number, Course.all, :course_number, :course_number_with_title, prompt: true %> 
     
-    <%= form.label :'Class Number for the course the grader is being recommended for (Enter only if you are requesting a grader for a specific section. Otherwise leave it blank). For example: If you requesting a grader for CSE 1110 Introduction to Computing Technology you can enter the class number that you are requesting the grader for lik 24741 or 24743' %>    
-    <%= form.number_field :section %>
+    <%= form.label :'Class Number for the course the grader is being recommended for (Enter only if you are requesting a grader for a specific section. Otherwise leave it blank). For example: If you requesting a grader for CSE 1110 Introduction to Computing Technology you can enter the class number that you are requesting the grader for like 24741 or 24743' %>    
+    <%= form.number_field :class_number %>
     
     <%= form.label :'Comments' %>
     <%= form.text_field :comments, size: "100", required: true %>
