Changed button CSS to match background.

--- a/lab-4/app/assets/stylesheets/home.scss
+++ b/lab-4/app/assets/stylesheets/home.scss
@@ -58,7 +58,7 @@ body{
 .alert{
     display: none;
     padding: 16px 20px;
-    background: #bb0000;
+    background: #2eafd2;
     text-align: center;
     color: white;
     border: white solid 1px;
@@ -160,11 +160,11 @@ body{
 	width: 90%;
 
 	/* Changes the background color of the button to a red color */
-	background-color: #bb0000;
+	background-color: #2eafd2;
 }
 
 .button-no-width-change:hover{
-    background-color: #bb0000;
+    background-color: #2eafd2;
 }
 
 .forgotPassword form input[type="submit"]{
