Changed so user cannot sign up as admin. Admin is created in seeds.rb

--- a/lab-4/app/views/devise/registrations/new.html.erb
+++ b/lab-4/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
   
     <div class="field">
         <%= f.label :select_role %><br />
-        <%= f.select :user_type, ['TA', 'Staff','Admin'] %>
+        <%= f.select :user_type, ['TA', 'Staff'] %>
     </div>
     <br/>
 
