--- a/lab-4/app/views/sections/edit.html.erb
+++ b/lab-4/app/views/sections/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editing Section</h1>
 
 <div class="white">
+<%# Edit a section using the form for specifying section information%>
 <%= render 'form', section: @section %>
 
 <%= link_to 'Show', @section %> |
