--- a/lab-4/app/views/sections/new.html.erb
+++ b/lab-4/app/views/sections/new.html.erb
@@ -1,6 +1,7 @@
 <h1>New Section</h1>
 
 <div class="white">
+<%# Use form for modifying section information to create a new section%>
 <%= render 'form', section: @section %>
 
 <%= link_to 'Back', course_path(@course) %>
