--- a/lab-4/app/views/grader_application/_form.html.erb
+++ b/lab-4/app/views/grader_application/_form.html.erb
@@ -1,5 +1,6 @@
 
 <%= fields_for @grader do |form| %>
+    <%# Grader form %>
     <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
     <%= form.label :name %>
     <%= form.text_field :name, required: true %>
@@ -16,13 +17,17 @@
     <%= form.label :semester, 'Semester You Are Applying For'%>
     <%= form.select :semester, [@terms[0], @terms[1]], required: true %>
     
+    <%# List current availabilities for grader%>
     <fieldset id="availabilities" name="availabilities" class="options" style="position:relative; padding:1em; margin-top:1em; margin-bottom:1em; border:2px black solid">
         <span style="position:absolute; left:0.5em; top:-0.75em; background:white;font-weight:bold">Available Times</span>
     </fieldset>
+    <%# Let user create a new availability, with the help of javascript%>
     <%= button_tag "Add", type: "button", onclick:"window.addNewTimeSlot()"%>
 
+    <%# List course interests for grader%>
     <fieldset id="courses" name="courses" class="options" style="position:relative; padding:1em; margin-top:1em; margin-bottom:1em; border:2px black solid">
         <span style="position:absolute; left:0.5em; top:-0.75em; background:white;font-weight:bold">Courses of Interest (Please only select courses you received an A in)</span>
     </fieldset>
+    <%# Let user add a new course they are interested and eligible for, with the help of javascript%>
     <%= button_tag "Add", type: "button", onclick:"window.addNewCourse()"%>
 <% end %>
