--- a/lab-4/app/views/sections/index.html.erb
+++ b/lab-4/app/views/sections/index.html.erb
@@ -28,6 +28,7 @@
         <td> <%= link_to 'Show', section %></td>
         
         <% if user_signed_in? %>
+          <%# Admin options for editing or deleting section %>
           <% if current_user.user_type == 'Admin' %>
             <td><%= link_to 'Show', section %></td>
             <td><%= link_to 'Edit', edit_section_path(section) %></td>
