--- a/lab-4/app/views/recommendations/display.html.erb
+++ b/lab-4/app/views/recommendations/display.html.erb
@@ -37,4 +37,4 @@
 
 <br>
 
-<%= link_to 'Back', root_path %>
+<%= link_to 'Back', root_path, class: "button-no-width-change width-30 left-button"  %>
