--- a/lab-4/app/views/courses/show.html.erb
+++ b/lab-4/app/views/courses/show.html.erb
@@ -62,6 +62,6 @@
 </table>
 
 <% if current_user.user_type == 'Admin' %>
-  <%= link_to 'Edit', edit_course_path(@course) %>
+  <%= link_to 'Edit', edit_course_path(@course), class: "button-no-width-change width-30 left-button"  %>
 <%end%>
-<%= link_to 'Back', home_index_path %>
+<%= link_to 'Back', home_index_path, class: "button-no-width-change width-30 left-button" %>
