--- a/lab-4/app/views/home/scrapeoptions.html.erb
+++ b/lab-4/app/views/home/scrapeoptions.html.erb
@@ -1,6 +1,6 @@
-<div class="white"
+<div class="white">
 <% if !user_signed_in? %>
-    </br>Please sign in or sign up to continue!!!!
+    <br/>Please sign in or sign up to continue!!!!
 <%end%>
 <% if current_user.user_type == 'Admin'%>
     <%# Rescrape options %>
@@ -12,10 +12,10 @@
         <%= form.select :career, @careers, {}, prompt: 'Select an academic career'%>
         <%= form.label :term, "Term:" %>
         <%= form.select :term, @terms, {}, prompt: 'Select a term'%>
-        </br>
+        <br/>
         <%= form.submit "Scrape", data: {confirm: 'Are you sure you want to re-scrape all data?'} %>
     <%end%>
 <% else %>
-    </br>You need to be an admin to start a rescrape!
+    <br/>You need to be an admin to start a rescrape!
 <%end%>
 </div>
