--- a/lab-4/app/views/recommendations/get.html.erb
+++ b/lab-4/app/views/recommendations/get.html.erb
@@ -1,5 +1,6 @@
 <h1> Recommendation Form </h1>
-<div class="white">
+
+<div class="recommendations">
 <form action="?" method="POST">
 
 <%= render 'form', courses: @courses%>
@@ -8,7 +9,5 @@
 <input type="submit" value="Submit">
 </form>
 
-
 <%= link_to 'Back to courses', home_index_path %>
-
 </div>
