--- a/lab-4/app/views/sections/showGraders.html.erb
+++ b/lab-4/app/views/sections/showGraders.html.erb
@@ -3,5 +3,5 @@
 <div class="white">
 <%= render 'grader_form', section: @section %>
 
-<%= link_to 'Back', section_path(@section), class: "button-no-width-change width-30 left-button %>
+<%= link_to 'Back', section_path(@section), class: "button-no-width-change width-30 left-button" %>
 </div>
