Added grader form css, and fixed edit profile page title.

--- a/lab-4/app/views/grader_application/get.html.erb
+++ b/lab-4/app/views/grader_application/get.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Grader Application</h1>
 
-<div class="white">
+<div class="white graderapp">
 
     <form action="?" method="POST">
         <%= render 'form', courses: @courses%>
