--- a/lab-4/app/assets/stylesheets/home.scss
+++ b/lab-4/app/assets/stylesheets/home.scss
@@ -22,7 +22,7 @@ body{
 
 
 /* CSS for the form element */
-.recommendations, .login, .signUp, .forgotPassword{
+.recommendations, .login, .signUp, .forgotPassword, .graderapp{
     background: #fff;
     
 	/* Sets the margin to auto so it can center on the page vertically and horizontally */
@@ -73,7 +73,7 @@ body{
     display: block;
 }
 
-.recommendations {
+.recommendations, .graderapp {
     height: 70%;
     margin-top: 60px;
 }
@@ -104,13 +104,13 @@ select{
     height: 60%;
     color: black;
 }
-.recommendations form input, .login form input[type="email"], .login form input[type="password"], .signUp form input[type="email"], .signUp form input[type="password"], .forgotPassword form input[type="email"], .forgotPassword form input[type="password"]{
+.graderapp form input, .recommendations form input, .login form input[type="email"], .login form input[type="password"], .signUp form input[type="email"], .signUp form input[type="password"], .forgotPassword form input[type="email"], .forgotPassword form input[type="password"]{
     width: 100%;
     height: 30px;
     border: solid 1px #ccc;
 }
 
-.recommendations form .comment-box:focus-visible, .recommendations form input:focus-visible, .login form input[type="email"]:focus-visible, .login form input[type="password"]:focus-visible, .signUp form input[type="email"]:focus-visible, .signUp form input[type="password"]:focus-visible, .forgotPassword form input[type="email"]:focus-visible, .forgotPassword form input[type="password"]:focus-visible{
+.graderapp form .comment-box:focus-visible, .graderapp form input:focus-visible, .recommendations form .comment-box:focus-visible, .recommendations form input:focus-visible, .login form input[type="email"]:focus-visible, .login form input[type="password"]:focus-visible, .signUp form input[type="email"]:focus-visible, .signUp form input[type="password"]:focus-visible, .forgotPassword form input[type="email"]:focus-visible, .forgotPassword form input[type="password"]:focus-visible{
     background: #E0E0E0;
     outline: solid 2px #767676;
 }
@@ -130,7 +130,7 @@ select{
 
 
 /* CSS for the submit button */
-.recommendations form input[type="submit"], .login form input[type="submit"], .login a, .signUp form input[type="submit"], .signUp a, .forgotPassword form input[type="submit"], .forgotPassword a, .button, .button-no-width-change{
+.graderapp form input[type="submit"], .recommendations form input[type="submit"], .login form input[type="submit"], .login a, .signUp form input[type="submit"], .signUp a, .forgotPassword form input[type="submit"], .forgotPassword a, .button, .button-no-width-change{
 	/* Sets a 0px top margin, auto left and right margin to center and a 20px bottom margin to separate from other things at the bottom */
 	margin: 30px auto 20px auto;
 
@@ -170,7 +170,7 @@ select{
 }
 
 /* CSS for hovering on submit button */
-.recommendations form input[type="submit"]:hover, .login form input[type="submit"]:hover, .login a:hover, .signUp form input[type="submit"]:hover, .signUp a:hover, .forgotPassword form input[type="submit"]:hover, .forgotPassword a:hover, .button:hover{
+.graderapp form input[type="submit"]:hover, .recommendations form input[type="submit"]:hover, .login form input[type="submit"]:hover, .login a:hover, .signUp form input[type="submit"]:hover, .signUp a:hover, .forgotPassword form input[type="submit"]:hover, .forgotPassword a:hover, .button:hover{
 	/* Changes the width to 90% of the container */
 	width: 90%;
 
@@ -284,3 +284,7 @@ h1{
     box-shadow: 0px 0px 10px 1px #666;
 }
 
+.graderapp {
+    overflow-y: scroll;
+    width: unset;
+}
